readme - indications and a word about security